# prettytable

./: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml  tox.ini
.github/: FUNDING.yml
.github/workflows/: release-drafter.yml  release.yml  test.yml
src/prettytable/: __init__.py  prettytable.py
tests/: conftest.py  test_colortable.py  test_json.py  test_latex.py  test_prettytable.py  test_sections.py  test_sorting.py  test_style.py
